[package]
name = "uae-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["full", "tracing"] }
futures = "0.3.30"
socket2 = "0.5.7"
env_logger = "0.11.5"
log = "0.4.22"